src/main/java/MochaParser.java
// Generated from C:/Users/risha/Documents/GitHub/ser502-project/src/main/antlr4\Mocha.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MochaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, DATA_TYPE=13, DATA_TYPE_INT=14, DATA_TYPE_FLOAT=15, 
		DATA_TYPE_BOOLEAN=16, DATA_TYPE_STRING=17, IDENTIFIER=18, LITERAL=19, 
		INTEGER_LITERAL=20, FLOATING_POINT_LITERAL=21, BOOLEAN_LITERAL=22, STRING_LITERAL=23, 
		BOOLEAN_TRUE=24, BOOLEAN_FALSE=25, WHITESPACE=26, OP_ASSIGN=27, OP_SET_ARITHMETIC=28, 
		OP_ADD=29, OP_SUB=30, OP_MUL=31, OP_DIV=32, OP_SET_RELATIONAL=33, OP_EQUALS=34, 
		OP_SMALLER=35, OP_GREATER=36, OP_SMALLER_EQUALS=37, OP_GREATER_EQUALS=38, 
		OP_SET_LOGICAL=39, OP_SET_LOGICAL_UNI=40, OP_SET_LOGICAL_BIN=41, OP_LOGICAL_AND=42, 
		OP_LOGICAL_OR=43, OP_LOGICAL_NOT=44, OP_TERNARY_TRUE=45, OP_TERNARY_FALSE=46;
	public static final int
		RULE_program = 0, RULE_body = 1, RULE_statement = 2, RULE_variable_declaration = 3, 
		RULE_identifier_list = 4, RULE_assignment_statement = 5, RULE_expression = 6, 
		RULE_arithmetic_expression = 7, RULE_arithmetic_expression_1 = 8, RULE_arithmetic_expression_term = 9, 
		RULE_arithmetic_expression_term_1 = 10, RULE_relational_expression = 11, 
		RULE_logical_expression = 12, RULE_ternary_expression = 13, RULE_expression_term = 14, 
		RULE_if_else_statement = 15, RULE_if_condition = 16, RULE_for_statement = 17, 
		RULE_for_expression = 18, RULE_while_statement = 19, RULE_while_condition = 20, 
		RULE_for_in_range_statement = 21, RULE_range = 22, RULE_print_statement = 23, 
		RULE_print_argument_list = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "body", "statement", "variable_declaration", "identifier_list", 
			"assignment_statement", "expression", "arithmetic_expression", "arithmetic_expression_1", 
			"arithmetic_expression_term", "arithmetic_expression_term_1", "relational_expression", 
			"logical_expression", "ternary_expression", "expression_term", "if_else_statement", 
			"if_condition", "for_statement", "for_expression", "while_statement", 
			"while_condition", "for_in_range_statement", "range", "print_statement", 
			"print_argument_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "','", "'if'", "'{'", "'}'", "'else'", "'for'", 
			"'to'", "'while'", "'in'", "'print'", null, "'int'", "'float'", "'boolean'", 
			"'string'", null, null, null, null, null, null, "'true'", "'false'", 
			null, "'='", null, "'+'", "'-'", "'*'", "'/'", null, "'=='", "'<'", "'>'", 
			"'<='", "'>='", null, null, null, "'and'", "'or'", "'not'", "'?'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "DATA_TYPE", "DATA_TYPE_INT", "DATA_TYPE_FLOAT", "DATA_TYPE_BOOLEAN", 
			"DATA_TYPE_STRING", "IDENTIFIER", "LITERAL", "INTEGER_LITERAL", "FLOATING_POINT_LITERAL", 
			"BOOLEAN_LITERAL", "STRING_LITERAL", "BOOLEAN_TRUE", "BOOLEAN_FALSE", 
			"WHITESPACE", "OP_ASSIGN", "OP_SET_ARITHMETIC", "OP_ADD", "OP_SUB", "OP_MUL", 
			"OP_DIV", "OP_SET_RELATIONAL", "OP_EQUALS", "OP_SMALLER", "OP_GREATER", 
			"OP_SMALLER_EQUALS", "OP_GREATER_EQUALS", "OP_SET_LOGICAL", "OP_SET_LOGICAL_UNI", 
			"OP_SET_LOGICAL_BIN", "OP_LOGICAL_AND", "OP_LOGICAL_OR", "OP_LOGICAL_NOT", 
			"OP_TERNARY_TRUE", "OP_TERNARY_FALSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mocha.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MochaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__0);
			setState(51);
			body();
			setState(52);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << T__9) | (1L << T__11) | (1L << DATA_TYPE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(54);
				statement();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Assignment_statementContext assignment_statement() {
			return getRuleContext(Assignment_statementContext.class,0);
		}
		public If_else_statementContext if_else_statement() {
			return getRuleContext(If_else_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public For_in_range_statementContext for_in_range_statement() {
			return getRuleContext(For_in_range_statementContext.class,0);
		}
		public Print_statementContext print_statement() {
			return getRuleContext(Print_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				variable_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				assignment_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				if_else_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				for_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				while_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				for_in_range_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				print_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TerminalNode DATA_TYPE() { return getToken(MochaParser.DATA_TYPE, 0); }
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(DATA_TYPE);
			setState(70);
			identifier_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Identifier_listContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MochaParser.IDENTIFIER, 0); }
		public TerminalNode OP_ASSIGN() { return getToken(MochaParser.OP_ASSIGN, 0); }
		public TerminalNode LITERAL() { return getToken(MochaParser.LITERAL, 0); }
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterIdentifier_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitIdentifier_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitIdentifier_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identifier_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(IDENTIFIER);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_ASSIGN) {
				{
				setState(73);
				match(OP_ASSIGN);
				setState(74);
				match(LITERAL);
				}
			}

			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(77);
				match(T__2);
				setState(78);
				identifier_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_statementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MochaParser.IDENTIFIER, 0); }
		public TerminalNode OP_ASSIGN() { return getToken(MochaParser.OP_ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Assignment_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterAssignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitAssignment_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitAssignment_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_statementContext assignment_statement() throws RecognitionException {
		Assignment_statementContext _localctx = new Assignment_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IDENTIFIER);
			setState(82);
			match(OP_ASSIGN);
			setState(83);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Arithmetic_expressionContext arithmetic_expression() {
			return getRuleContext(Arithmetic_expressionContext.class,0);
		}
		public Relational_expressionContext relational_expression() {
			return getRuleContext(Relational_expressionContext.class,0);
		}
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public Ternary_expressionContext ternary_expression() {
			return getRuleContext(Ternary_expressionContext.class,0);
		}
		public Expression_termContext expression_term() {
			return getRuleContext(Expression_termContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				arithmetic_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				relational_expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				logical_expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				ternary_expression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				expression_term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_expressionContext extends ParserRuleContext {
		public Arithmetic_expression_termContext arithmetic_expression_term() {
			return getRuleContext(Arithmetic_expression_termContext.class,0);
		}
		public Arithmetic_expression_1Context arithmetic_expression_1() {
			return getRuleContext(Arithmetic_expression_1Context.class,0);
		}
		public Arithmetic_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterArithmetic_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitArithmetic_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitArithmetic_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_expressionContext arithmetic_expression() throws RecognitionException {
		Arithmetic_expressionContext _localctx = new Arithmetic_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arithmetic_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			arithmetic_expression_term();
			setState(93);
			arithmetic_expression_1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_expression_1Context extends ParserRuleContext {
		public TerminalNode OP_ADD() { return getToken(MochaParser.OP_ADD, 0); }
		public Arithmetic_expression_termContext arithmetic_expression_term() {
			return getRuleContext(Arithmetic_expression_termContext.class,0);
		}
		public Arithmetic_expression_1Context arithmetic_expression_1() {
			return getRuleContext(Arithmetic_expression_1Context.class,0);
		}
		public TerminalNode OP_SUB() { return getToken(MochaParser.OP_SUB, 0); }
		public Arithmetic_expression_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expression_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterArithmetic_expression_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitArithmetic_expression_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitArithmetic_expression_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_expression_1Context arithmetic_expression_1() throws RecognitionException {
		Arithmetic_expression_1Context _localctx = new Arithmetic_expression_1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_arithmetic_expression_1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_ADD:
				{
				setState(95);
				match(OP_ADD);
				setState(96);
				arithmetic_expression_term();
				setState(97);
				arithmetic_expression_1();
				}
				break;
			case OP_SUB:
				{
				setState(99);
				match(OP_SUB);
				setState(100);
				arithmetic_expression_term();
				setState(101);
				arithmetic_expression_1();
				}
				break;
			case T__1:
			case T__3:
			case T__5:
			case T__7:
			case T__9:
			case T__11:
			case DATA_TYPE:
			case IDENTIFIER:
			case OP_TERNARY_FALSE:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_expression_termContext extends ParserRuleContext {
		public Expression_termContext expression_term() {
			return getRuleContext(Expression_termContext.class,0);
		}
		public Arithmetic_expression_term_1Context arithmetic_expression_term_1() {
			return getRuleContext(Arithmetic_expression_term_1Context.class,0);
		}
		public Arithmetic_expression_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expression_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterArithmetic_expression_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitArithmetic_expression_term(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitArithmetic_expression_term(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_expression_termContext arithmetic_expression_term() throws RecognitionException {
		Arithmetic_expression_termContext _localctx = new Arithmetic_expression_termContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_arithmetic_expression_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			expression_term();
			setState(106);
			arithmetic_expression_term_1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_expression_term_1Context extends ParserRuleContext {
		public TerminalNode OP_MUL() { return getToken(MochaParser.OP_MUL, 0); }
		public Expression_termContext expression_term() {
			return getRuleContext(Expression_termContext.class,0);
		}
		public Arithmetic_expression_term_1Context arithmetic_expression_term_1() {
			return getRuleContext(Arithmetic_expression_term_1Context.class,0);
		}
		public TerminalNode OP_DIV() { return getToken(MochaParser.OP_DIV, 0); }
		public Arithmetic_expression_term_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expression_term_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).enterArithmetic_expression_term_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MochaListener ) ((MochaListener)listener).exitArithmetic_expression_term_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MochaVisitor ) return ((MochaVisitor<? extends T>)visitor).visitArithmetic_expression_term_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arithmetic_expression_term_1Context arithmetic_expression_term_1() throws RecognitionException {
		Arithmetic_expression_term_1Context _localctx = new Arithmetic_expression_term_1Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_arithmetic_expression_term_1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_MUL:
				{
				setState(108);
				match(OP_MUL);
				setState(109);
				expression_term();
				setState(110);
				arithmetic_expression_term_1();
				}
				break;
			case OP_DIV:
				{
				setState(112);
				match(OP_DIV);
				setState(113);
				expression_term();
				setState(114);
				arithmetic_expression_term_1();
				}
				break;
			case T__1:
			case T__3:
			case T__5:
			case T__7:
			case T__9:
			case T__11:
			case DATA_TYPE:
			case IDENTIFIER:
			case OP_ADD:
			case OP_SUB:
			case OP_TERNARY_FALSE:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
